card overlaping issue solved

--- a/style.css
+++ b/style.css
@@ -1915,7 +1915,7 @@ header nav ul li a {
 
 h2 {
   text-align: center;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
   font-size: 2em;
 }
 
